[gd_scene load_steps=5 format=2]

[ext_resource path="res://screens/character_selection_screen/CharacterSelection.gd" type="Script" id=1]
[ext_resource path="res://screens/character_selection_screen/Species.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/character_selection_screen/ReadyScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=4]

[node name="Selection" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_constants" ]

[node name="players_containers" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "custom_constants" ]

[node name="P1" parent="players_containers" index="0" instance=ExtResource( 2 )]

anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 58.0
margin_top = 0.0
margin_right = 346.0
margin_bottom = 720.0

[node name="P2" parent="players_containers" index="1" instance=ExtResource( 2 )]

anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 350.0
margin_top = 0.0
margin_right = 638.0
margin_bottom = 720.0

[node name="P3" parent="players_containers" index="2" instance=ExtResource( 2 )]

anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 642.0
margin_top = 0.0
margin_right = 930.0
margin_bottom = 720.0

[node name="P4" parent="players_containers" index="3" instance=ExtResource( 2 )]

anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 934.0
margin_top = 0.0
margin_right = 1222.0
margin_bottom = 720.0

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="ReadyScreen" type="Control" parent="CanvasLayer" index="0"]

pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Pause" ]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/ReadyScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.607726 )

[node name="Label" type="Label" parent="CanvasLayer/ReadyScreen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Choose_container" type="VBoxContainer" parent="CanvasLayer/ReadyScreen" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.0
margin_top = -36.0
margin_right = 137.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Fight" type="Button" parent="CanvasLayer/ReadyScreen/Choose_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 274.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
disabled = true
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "players fight!"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="Back" type="Button" parent="CanvasLayer/ReadyScreen/Choose_container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_right = 274.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
disabled = true
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
text = "back to choosing"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[connection signal="pressed" from="CanvasLayer/ReadyScreen/Choose_container/Fight" to="CanvasLayer/ReadyScreen" method="_on_Fight_pressed"]

[connection signal="pressed" from="CanvasLayer/ReadyScreen/Choose_container/Back" to="CanvasLayer/ReadyScreen" method="_on_Back_pressed"]


